@@ -24,6 +24,7 @@ import edu.wpi.first.math.geometry.Translation3d;
 import edu.wpi.first.math.util.Units;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /** Describes the 3d model of a target. */
 public class TargetModel {
@@ -150,7 +151,7 @@ public class TargetModel {
      */
     public List<Translation3d> getFieldVertices(Pose3d targetPose) {
         var basisChange = new RotTrlTransform3d(targetPose.getRotation(), targetPose.getTranslation());
-        return vertices.stream().map(basisChange::apply).toList();
+        return vertices.stream().map(basisChange::apply).collect(Collectors.toList());
     }
 
     /**
